--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 eframe = "0.26.2"
 egui_extras = { version = "0.26.2", features = ["all_loaders"] }
 env_logger = "0.11.2"
+opml = "1.1.6"
 reqwest = { version = "0.11.24", features = ["blocking", "json"] }
 rss = "2.0.7"
